Fixed alignment of view list item chevron

--- a/styl/List.styl
+++ b/styl/List.styl
@@ -65,7 +65,8 @@ ul.list {
 	
 			i.view {
 				color: $list-view-color;
-				font-size: 1.5em;
+				font-size: 1.45em;
+				height: 1em;
 			}
 		}
 	}
